server-sasl-handler: add auth-password-failed signal

https://bugzilla.gnome.org/show_bug.cgi?id=661640